JBPMP-700 JDK 17 support